force-app/main/default/objects/CustomerStories__c/CustomerStories__c.object-meta.xml
<CustomObject>
    <label>Customer Stories</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>