force-app/main/default/objects/CustomerStories__c/fields/About__c.field-meta.xml
<CustomField>
    <fullName>About__c</fullName>
    <label>About</label>
    <type>TextArea</type>
</CustomField>