force-app/main/default/objects/CustomerStories__c/fields/ClientSince__c.field-meta.xml
<CustomField>
    <fullName>ClientSince__c</fullName>
    <label>Client Since</label>
    <type>Date</type>
</CustomField>