force-app/main/default/objects/CustomerStories__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>controller if the Customer story will or will not show on the webpage.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>