force-app/main/default/objects/CustomerStories__c/fields/LongDescription__c.field-meta.xml
<CustomField>
    <fullName>LongDescription__c</fullName>
    <label>Long Description</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>