force-app/main/default/objects/CustomerStories__c/fields/MainImage__c.field-meta.xml
<CustomField>
    <fullName>MainImage__c</fullName>
    <label>Main Image</label>
    <type>Url</type>
</CustomField>