force-app/main/default/objects/CustomerStories__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>