force-app/main/default/objects/CustomerStories__c/fields/SecondImage__c.field-meta.xml
<CustomField>
    <fullName>SecondImage__c</fullName>
    <label>Second Image</label>
    <type>Url</type>
</CustomField>