force-app/main/default/objects/CustomerStories__c/fields/StoryLink__c.field-meta.xml
<CustomField>
    <fullName>StoryLink__c</fullName>
    <label>Story Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>