force-app/main/default/objects/CustomerStories__c/fields/ThirdImage__c.field-meta.xml
<CustomField>
    <fullName>ThirdImage__c</fullName>
    <label>Third Image</label>
    <type>Url</type>
</CustomField>